refactor and add plugin manager

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web Menu</title>
   <link rel="stylesheet" href="menu/style.css">
-  <script src="menu/index.js" defer></script>
+  <script src="menu/plugin-manager.js" defer></script>
+  <script src="menu/worker-connection.js" defer></script>
 </head>
 
 <body>
