--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Web Menu</title>
   <link rel="stylesheet" href="menu/style.css">
   <script src="menu/plugin-manager.js" defer></script>
-  <script src="menu/worker-connection.js" defer></script>
+  <script src="menu/connection-manager.js" defer></script>
 </head>
 
 <body>
