add plugin button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
   <div class="sidebar" id="tabs"></div>
-  <div class="sidebar" id="scripts"></div>
+  <div class="sidebar" id="plugins">
+    <div onclick="addPlugin(prompt())">Add Plugin</div>
+  </div>
   <div class="sidebar" id="sections"></div>
   <div id="current"></div>
 </body>
